css/index.css
/* ... */
section#product div.wrap {
  margin: 0 auto;
  width: calc(100% - 80px);
}
section#product div.wrap ul{
		display: flex;
        gap: 15px;
	}
section#product div.wrap ul li {
  width: calc(100% / 8);
  transition: transform .2s ease;
}
section#product div.wrap ul li:hover {
   transform: translateY(-10px); 
}
section#product div.wrap ul li a {
  background-color: white;
  box-shadow: 0 0 2px rgba(0,0,0,.08),4px 12px 36px rgba(0,0,0,.09);
  border-radius: 15px;
  height: 100px;
  line-height: 1.2;
  padding-left: 30px;
}
section#product div.wrap ul li a figure {
  gap: 10px;
  height: 100%;
  justify-content: left;
  align-items: center;
}
section#product div.wrap ul li a figure img {
  width: 44px;
  height: 44px;
}
section#product div.wrap ul li a figure figcaption h3 {
  margin-bottom: 5px;
  font-size: 14px;
  line-height: 1.2;
  font-weight: 600;
  letter-spacing: -.5px;
}
section#product div.wrap ul li a figure figcaption h3::after {
  content:"";
  width: 4.5px;
  height: 4.5px;
  display: inline-block;
  border: 2px solid;
  transform: translateY(-2px) translateX(4px) rotate(45deg);
  border-left: transparent;
  border-bottom: transparent;
}
section#product div.wrap ul li a figure figcaption p {
  font-size: 11px;
  line-height: 1.3;
  letter-spacing: -.5px;
  color: rgba(26, 26, 26, .5);
}

/* Service */
section#service {
  padding: 0 40px;
}
section#service div {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: initial;
  height: 600px;
  border-radius: 20px;
  gap: 50px;
  text-align: center;
  line-height: 1.4;
  background-image: url(../img/adzero.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #333;
  background-position: center;
}
section#service div p {
  display: block;
  color: black;
}
section#service div a {
  padding: 15px 36px;
  border-radius: 6px;
  font-size: 16px;
  font-weight: 700;
  background-color: black;
  color: #fff;
}
section#service div a:hover {
  background-color: #666;  
}
section#service div a::after {
  content: "";
  transform: translateY(-1px) translateX(3px) rotate(45deg);
  display: inline-block;
  width: 6px;
  height: 6px;
  border: 2px solid #fff;
  border-left: transparent;
  border-bottom: transparent;
  margin-left: 5px;
}

/* Business */
section#business {
  padding: 0 40px;
}
section#business .wrap {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: initial;
  height: 600px;
  border-radius: 20px;
  gap: 50px;
  text-align: center;
  line-height: 1.4;
  background-image: url(../img/business.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #333;
  background-position: center;
  color: #fff;
  filter: grayscale(0);
  transition: 1s;
  margin-top: 25px;
  margin-bottom: 25px;
}
section#business .wrap:hover {
  filter: grayscale(1);
}
section#business div p {
  display: block;
  color: #fff;
}
section#business div a {
  height: 20px;
  background-color: #fff;
  padding: 20px 20px;
  border-radius: 6px;
  font-size: 16px;
  font-weight: 1000;
  color: black;
}
section#business div a:hover {
  background-color: #666;  
}
section#business div a::after {
  content: "";
  transform: translateY(-1px) translateX(3px) rotate(45deg);
  display: inline-block;
  width: 6px;
  height: 6px;
  border: 2px solid #000000;
  border-left: transparent;
  border-bottom: transparent;
  margin-left: 5px;
}

/* Altools */
section#altools {
  max-width: 1400px;
  width: calc(100% - 80px);
  border-radius: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  margin: 28px auto 0;
}
section#altools div.wrap {
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
  padding: 120px 0 80px;
}
section#altools div.wrap ul.list {
  position: relative;
  display: flex;
}
.slick-initialized .slick-slide > div{
  margin-bottom: 60px;
  margin-top: 50px;
}
section#altools div.wrap ul.list .slick-prev::before{
  content: '';
  background-image: url(../img/slick/arrowback.svg);
  width: 24px;
  height: 24px;
  display: block;
  background-size: contain;
  background-repeat: no-repeat;
  position: absolute;
  left: .7vw;
  top: 8.5vw;
}
section#altools div.wrap ul.list .slick-next::before{
  content: '';
  background-image: url(../img/slick/arrownext.svg);
  width: 24px;
  height: 24px;
  display: block;
  background-size: contain;
  background-repeat: no-repeat;
  position: absolute;
  left: 3px;
}
section#altools div.wrap ul.list button{
  top: 0px;
  left: -28px;
}
section#altools div.wrap ul.list .wnext{
  position: absolute;
  display: flex;
  gap: 2px;
  bottom: 0;
  right: -4.5vw;
  top: 8vw;
}
section#altools div.wrap ul.list li.m {
  transition: 0.5s;
  box-sizing: border-box;
  margin-right: 25px;
}
section#altools div.wrap ul.list li.m:hover{
  transform: translateY(-10px)
}
section#altools div.wrap ul.list li.m a {
  padding: 0px 20px 24px 20px;
  height: 340px;
  width: 270px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-shadow: 0px 0px 10px #ccc;
  border-radius: 20px;
}
section#altools div.wrap ul.list li.m a h3{
  padding-bottom: 10px;
  padding-top: 10px;
}
section#altools div.wrap ul.list li.m a::before {
  content: "";
  display: block;
  height: 100px;
  background-size: cover;
  background-position: center;
  margin-left: -20px;
  margin-right: -20px;
  border-radius: 20px;
  background-color: #ccc;
}
section#altools div.wrap ul li:nth-child(1) a::before{
  background-image: url(../img/altools1.jpg);
}
section#altools div.wrap ul li:nth-child(2) a::before{
  background-image: url(../img/altools2.jpg);
}
section#altools div.wrap ul li:nth-child(3) a::before{
  background-image: url(../img/altools3.jpg);
}
section#altools div.wrap ul li:nth-child(4) a::before{
  background-image: url(../img/altools4.jpg);
}
/* ... */

